--- a/ABMODELE/ABMODELE.csproj
+++ b/ABMODELE/ABMODELE.csproj
@@ -184,7 +184,6 @@
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\OrdensController.cs" />
     <Compile Include="Controllers\ProductosController.cs" />
-    <Compile Include="Controllers\StoreController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -248,6 +247,10 @@
     <Compile Include="Migrations\201907151641297_CategoriasProductos.Designer.cs">
       <DependentUpon>201907151641297_CategoriasProductos.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201907162100050_Destacados.cs" />
+    <Compile Include="Migrations\201907162100050_Destacados.Designer.cs">
+      <DependentUpon>201907162100050_Destacados.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModel.cs" />
     <Compile Include="Models\CarroDeCompra.cs" />
@@ -264,6 +267,7 @@
     <Compile Include="Models\SinIngrediente.cs" />
     <Compile Include="Models\TipoProducto.cs" />
     <Compile Include="Models\ViewModel\CarroViewModel.cs" />
+    <Compile Include="Models\ViewModel\HomeViewModel.cs" />
     <Compile Include="Models\ViewModel\ProductoViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -472,12 +476,12 @@
     <Content Include="Scripts\popper.js.map" />
     <Content Include="Scripts\popper-utils.min.js.map" />
     <Content Include="Scripts\popper-utils.js.map" />
-    <Content Include="Views\Store\Details.cshtml" />
-    <Content Include="Views\Store\Browse.cshtml" />
-    <Content Include="Views\Store\Index.cshtml" />
+    <Content Include="Views\Productos\Browse.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Content\img\Categorias\" />
+    <Folder Include="Content\img\Productos\" />
     <Folder Include="Views\Carrito\" />
     <Folder Include="Views\CrearPago\" />
   </ItemGroup>
@@ -539,6 +543,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201907151641297_CategoriasProductos.resx">
       <DependentUpon>201907151641297_CategoriasProductos.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201907162100050_Destacados.resx">
+      <DependentUpon>201907162100050_Destacados.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
