--- a/ABMODELE/ABMODELE.csproj
+++ b/ABMODELE/ABMODELE.csproj
@@ -477,6 +477,7 @@
     <Content Include="Scripts\popper-utils.min.js.map" />
     <Content Include="Scripts\popper-utils.js.map" />
     <Content Include="Views\Productos\Browse.cshtml" />
+    <Content Include="Views\Ingredientes\Informe.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
