--- a/ABMODELE/ABMODELE.csproj
+++ b/ABMODELE/ABMODELE.csproj
@@ -47,6 +47,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="BeginCollectionItem, Version=1.2.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\BeginCollectionItem.1.2.1.0\lib\net35\BeginCollectionItem.dll</HintPath>
+    </Reference>
     <Reference Include="KhipuApiClient, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\KhipuApiClient.2.9.1\lib\net472\KhipuApiClient.dll</HintPath>
     </Reference>
@@ -268,6 +271,7 @@
     <Compile Include="Models\TipoProducto.cs" />
     <Compile Include="Models\ViewModel\CarroViewModel.cs" />
     <Compile Include="Models\ViewModel\HomeViewModel.cs" />
+    <Compile Include="Models\ViewModel\ProductoToIngredienteViewModel.cs" />
     <Compile Include="Models\ViewModel\ProductoViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -466,7 +470,6 @@
     <Content Include="Views\Ordens\Details.cshtml" />
     <Content Include="Views\Ordens\Edit.cshtml" />
     <Content Include="Views\Ordens\Index.cshtml" />
-    <Content Include="Views\Productos\Numerito.cshtml" />
     <Content Include="Scripts\umd\popper.min.js.map" />
     <Content Include="Scripts\umd\popper.js.map" />
     <Content Include="Scripts\umd\popper-utils.min.js.map" />
@@ -478,6 +481,8 @@
     <Content Include="Scripts\popper-utils.js.map" />
     <Content Include="Views\Productos\Browse.cshtml" />
     <Content Include="Views\Ingredientes\Informe.cshtml" />
+    <Content Include="Views\Productos\IngredientePartial.cshtml" />
+    <Content Include="Views\Shared\EditorTemplates\Collection.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -485,6 +490,7 @@
     <Folder Include="Content\img\Productos\" />
     <Folder Include="Views\Carrito\" />
     <Folder Include="Views\CrearPago\" />
+    <Folder Include="Views\Productos\Partialview\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
